aks-yaml/base/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels: { app: backend }
spec:
  replicas: 1
  selector: { matchLabels: { app: backend } }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend
          image: __ACR_FQDN__/backend:latest-dev
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8080 }]
