aks-yaml/base/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  
  labels: { app: frontend }
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend } }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: __ACR_FQDN__/frontend:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 80 }]
