aks-yaml/base/mssql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: default
spec:
  selector:
    app: mssql
  ports:
  - port: 1433
    targetPort: 1433
  type: ClusterIP
